--- a/RB-Tree/RB-Tree.vcxproj
+++ b/RB-Tree/RB-Tree.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="RB-Tree.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="RB-CLASS.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RB-CLASS.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
